# go-bazel-hello-world

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE
cmd/: BUILD.bazel  hello.go  main.go
hack/: create-bazel-workspace.sh
pkg/cmd/: BUILD.bazel  hello.go  root.go
