load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "go-bazel-hello-world",
    importpath = "github.com/chrislovecnm/go-bazel-hello-world/cmd",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/chrislovecnm/go-bazel-hello-world/cmd",
    visibility = ["//visibility:public"],
    deps = ["//pkg/cmd:go_default_library"],
)

go_binary(
    name = "cmd",
    importpath = "github.com/chrislovecnm/go-bazel-hello-world/cmd",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
